--- a/taskmanager/templates/taskmanager/home.html
+++ b/taskmanager/templates/taskmanager/home.html
@@ -1,45 +1,45 @@
 {% extends "taskmanager/base.html" %}
+{% block head_css %}
+     <!-- Bootstrap CSS -->
+{% endblock head_css %}
 {% block content %}
-	  <div class="container-fluid" id="content">
-    <div class="row">
-      <h1>Task Manager</h1>
-    </div>
+	  <div class="container-fluid caption" id="main">
+    <h1 style="color:rgb(0, 0, 0);
+    font-size: 50px;
+    text-align: center;">Welcome to Task Manager.</h1>
   </div>
+  <br>
   <div class="container-fluid" id="details">
-    <div class="d-flex justify-content-center">
-      <p class="w-75">A minor project done by the 6th semester CSE students Balaji S (4NI18CS014),H G Saatvik (4NI18CS025),Harisha S
-        (4NI18CS026) from The National Institute of Engineering. Under the guidance of Mrs. Ramya S.</p>
-
-    </div>
-  </div>
-  <div class="container-fluid" id="text">
-
-    <div class="d-flex  justify-content-center">
-      <p class="w-50"> The average human functions at optimum always when he/she does one thing at a time with full
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <p class="w-70 p-3" style="text-align: center;
+      font-size: 1.1em;
+      font-weight: 400;
+      color: rgb(0, 0, 0);">A minor project done by the 6th semester CSE students Balaji S (4NI18CS014),H G Saatvik
+        (4NI18CS025),Harisha S
+        (4NI18CS026) from The National Institute of Engineering. Under the guidance of Mrs. Ramya S.
+        <br>
+        <br>
+        The average human functions at optimum always when he/she does one thing at a time with full
         focus. The mind
         can often be bogged down by the thought of multiple tasks of varying importance that remain to be completed
         during the day. To avoid this conundrum, many people hire assistants or secretaries to help with scheduling
         and
         managerial needs. However in this age of automation, the ideal solution is to develop a task manager that acts
-        as a virtual assistant to the human, simplifying the whole exercise of planning your day!</p>
-    </div>
-  </div>
-  <div class="container-fluid" id="text">
-    <div class="d-flex justify-content-center">
-      <p class="w-50">Our solution is an integrated task manager application that can help effectively manage tasks
+        as a virtual assistant to the human, simplifying the whole exercise of planning your day!
+        <br>
+        <br>
+        Our solution is an integrated task manager application that can help effectively manage tasks
         throughout the
         day. The application is packed with features that will help you to keep track and assist with scheduling
         without
-        any hassles. We hope you enjoy using our application and find it useful for everyday tasks. This project was
-        built using python's django framework, SqlLite, Bootstrap 5 and html/css. Thank you for visiting.</p>
+        any hassles. We hope you enjoy using our application and find it useful for managing everyday tasks. This
+        project was
+        built using python's django framework, SqlLite, Bootstrap 5 and html/css. Thank you for visiting.
+      </p>
 
     </div>
   </div>
-  <div class="container-fluid" id="footer">
-    <div class="row">
-      <div class="col">
-        &copy;Task Manager 2021
-      </div>
-    </div>
-  </div>
+
+  <!-- Common Footer, footer.css -->
+
 {%endblock content %}
