--- a/taskmanager/templates/taskmanager/plot.html
+++ b/taskmanager/templates/taskmanager/plot.html
@@ -1,7 +1,7 @@
 {% extends 'taskmanager/base.html' %}
 
 {% block content %}
-  <div id="container" style="width: 75%;">
+  <div id="container" style="width: 100%;">
     <canvas id="pie-chart"></canvas>
   </div>
 
@@ -31,6 +31,11 @@
     };
 
   </script>
+    <center>
   <h6>Total Number of Tasks:{{sum}}</h6>
+  <h6>Percentage of tasks completed in time   :{{success_p}}</h6>
+    <h6>Percentage of tasks deleted :{{deleted_percentage}}</h6>
+    <h6>Percentage of tasks delayed :{{delayed_percentage}}</h6>
+    </center>
 
 {% endblock %}
